--- a/Geometricas/pom.xml
+++ b/Geometricas/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>java-cup-runtime</artifactId>
             <version>11b-20160615</version>
         </dependency>
+        <!-- DEPENDECIA DE PDF -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
     </dependencies>
     
     <!-- PROPIEDADES PARA EL MAIN -->
